syntax = "proto3";
option go_package = ".;proto";

message MatchRequest {
  string player_id = 1;
  string game = 2;
  int32 player_limit = 3;
  string code = 4;
  string version = 5;
}

message MatchEvent {
  string code = 1;
  int32 player_index = 2;
  int32 player_count = 3;
  string game_id = 4;
  string location = 5;
  
}

service MatchService {
  rpc Match(MatchRequest) returns (stream MatchEvent) {};
}

message CreateGameRequest {
  repeated string player_id = 1;
}

message CreateGameResponse {
  string game_id = 1;
}

message GameEvent {
  enum Type {
    DATA_NONE = 0;
    DATA_INT = 1;
    DATA_STRING = 2;
    DATA_MAP = 3;
    DATA_BYTES = 4;
    DATA_MIXED = 5;
  }
  string game_id = 1;
  string player_id = 2;
  Type type = 3;
  string key = 4;
  int32 value_int = 5;
  string value_string = 6;
  map<string, string> value_map = 7;
  bytes value_bytes = 8;
}

service GameService {
  rpc Create(CreateGameRequest) returns (CreateGameResponse) {};
  rpc Play(stream GameEvent) returns (stream GameEvent) {};
}